--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .no-inner-spin-button::-webkit-inner-spin-button,
+    .no-inner-spin-button::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        appearance: none;
+    }
+}
